# vectortest

./: .gitignore  CMakeLists.txt  README.md  runtest.cmd
VectorMultiplyTest/: CMakeLists.txt  MathHelpers.h  Timer.h  VectorMultiplyTest.cpp  VectorMultiplyTest.sln  VectorMultiplyTest.vcxproj  VectorMultiplyTest.vcxproj.filters
VectorMultiplyTest/VectorMultiplyTest/: ReadMe.txt  VectorMultiplyTest.cpp  VectorMultiplyTest.vcxproj  VectorMultiplyTest.vcxproj.filters  packages.config  stdafx.cpp
